--- a/Banner.html
+++ b/Banner.html
@@ -117,6 +117,11 @@
           <p>+6 bannières</p>
           <a href="BannerNaruto.html">VOIR</a>
         </li>
+        <li>
+          <h3>OTHER</h3>
+          <p>+4 bannières</p>
+          <a href="BannerMix.html">VOIR</a>
+        </li>
       </ul>
       <div class="banner-container-link-social">
         <h2>SOCIAL</h2>
