--- a/BannerMix.html
+++ b/BannerMix.html
@@ -32,33 +32,33 @@
     <a href="BannerOP.html">ONE PIECE</a>
     <a href="BannerSNK.html">SNK</a>
     <a href="BannerHxH.html">HxH</a>
-    <a class="active" href="BannerDN.html">DEATHNOTE</a>
+    <a href="BannerDN.html">DEATHNOTE</a>
     <a href="BannerDB.html">DB</a>
-    <a href="BannerMix.html">OTHER</a>
+    <a class="active" href="BannerMix.html">OTHER</a>
   </nav>
-<section id="Appreciate" class="appreciate">
-  <div class="container">
-      <ul class="appreciate-list">
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/Mix/doflamingokakashi&.JPG" alt="DoflamingoKakashi" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Doflamingo, Kakashi & ?</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Vestes phosphorescentes</p>
+              </div>
+          </li>
           <li class="appreciate-elem">
-            <img class="banniere" src="./img/Bannière/Ryuk&Lightbanniere.jpeg" alt="Ryuk" class="appreciate-elem-img">
+            <img class="banniere" src="./img/Bannière/Mix/naruto&luffy.JPG" alt="naruto&luffy" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Ryuk & Light</p>
+                <p>Naruto&Luffy</p>
                 <div class="appreciate-separator"></div>
-                <p>"Nope"</p>
+                <p>Smile</p>
             </div>
         </li>
-        <li class="appreciate-elem">
-          <img class="banniere" src="./img/Bannière/L&Light.JPG" alt="l&light" class="appreciate-elem-img">
-          <div class="appreciate-elem-text">
-              <p>L & Light</p>
-              <div class="appreciate-separator"></div>
-              <p>Black theme</p>
-          </div>
-      </li>
-      </ul>
-  </div>
-</section>
-<footer>
+        </ul>
+    </div>
+  </section>
+  <footer>
     <aside>
       <div class="block">
           <h2>SOCIAL</h2>
@@ -79,6 +79,6 @@
     <p>
         Copyright © 2020 M.LEMERCIER, Inc.
     </p>
-  </footer>
-  </body>
-  </html>
+</footer>
+</body>
+</html>
