--- a/computer.html
+++ b/computer.html
@@ -27,171 +27,87 @@
       <li><a href="focus.html">Focus</a></li>
     </ul>
   </header>
-  <nav>
-    <a href="banner.html"><i class="fab fa-twitter"></i>BANNIERE</a>
-    <a class="active" href="computer.html">COMPUTER<i class="fas fa-desktop"></i></a>
-  </nav>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/ZoroOKLMPC.JPG" alt="Zoro" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Roronoa Zoro</p>
-                    <div class="appreciate-separator"></div>
-                    <p> Maitrise ENMA</p>
-                </div>
-            </li>
+  <section class="banner" id="banner">
+    <div class="banner-container">
+      <div class="banner-container-list">
+        <div class="banner-container-elem">
+          <h5>
+            Ajouts récents
+          </h2>
+        <ul>
+          <li>
+            <h2>
+              Ayameduse
+            </h2>
+            <img src="./img/PC/izuku&ochaca.jpeg" alt="Ochaca">
+            <h2>
+              Izuku & Ochaca
+            </h2>
+          </li>
+          <li>
+            <h2>
+              Makii
+            </h2>
+            <img src="./img/PC/SanjiLuffyZoroPC.JPG" alt="SanjiLuffyZoro">
+            <h2>
+              Sanji, Luffy & Zoro
+            </h2>
+          </li>
+          <li>
+            <h2>
+              "Itadakimasu !"
+            </h2>
+            <img src="./img/PC/NarutomcdoPC 17.31.19.JPG" alt="Naruto">
+            <h2>
+              Naruto Uzumaki
+            </h2>
+          </li>
         </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/izuku&ochaca.jpeg" alt="Izuku" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Izuku & Ochaca</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Technique</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/mortaceluffywall.JPG" alt="Acemort" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Mort Ace</p>
-                    <div class="appreciate-separator"></div>
-                    <p> dernier instant</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/Itachi&Sasuke.JPG" alt="Itachi&Sasuke" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Itachi & Sasuke</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Confrontation</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/LuffyWANOPC.JPG" alt="LuffyWANO" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Monkey D. Luffy</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Winter Wano</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/UsoppPC.JPG" alt="Usopp" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Usopp</p>
-                    <div class="appreciate-separator"></div>
-                    <p>SniperKing</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/ShikamaruPC.JPG" alt="Shikamaru" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Shikamaru</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Technique des ombres</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/TitancolossalPC.JPG" alt="TITAN" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Titan Colossal</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Souffle ardent</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/ZoroPC.JPG" alt="Zoro" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Roronoa Zoro</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Wano Kuni</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/SanjiLuffyZoroPC.JPG" alt="SanjiLUffyZoro" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Sanji, Luffy & Zoro</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Sombre nuit</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </section>
-  <footer>
-    <aside>
-      <div class="block">
-          <h2>SOCIAL</h2>
-          <div class="social-container">
-              <i class="fab fa-twitter"></i>
-              <a href="https://twitter.com/vlemrc">@vlemrc</a>
-          </div>
-          <div class="social-container">
-              <i class="fab fa-snapchat"></i>
-              <a href="#">Vicoboss7</a>
-          </div>
-          <div class="social-container">
-              <i class="fab fa-instagram"></i>
-              <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
-          </div>
       </div>
-  </aside>
-    <p>
-        Copyright © 2020 M.LEMERCIER, Inc.
-    </p>
-</footer>
+    </div>
+    <div class="banner-container-link">
+      <h2>Avoir un fde PC de son animé préféré, <br> c'est mieux non ?</h2>
+      <h4>Suggestions pour vous</h4>
+        <ul>
+          <li>
+            <h3>ONE PIECE</h3>
+            <p>+4 fonds d'écrans</p>
+            <a href="computerOP.html">VOIR</a>
+          </li>
+        <li>
+          <h3>SNK</h3>
+          <p>+2 fonds d'écrans</p>
+          <a href="computerSNK.html">VOIR</a>
+        </li>
+        <li>
+          <h3>MHA</h3>
+          <p>+2 fonds d'écrans</p>
+          <a href="computerMHA.html">VOIR</a>
+        </li>
+        <li>
+          <h3>DRAGONBALL</h3>
+          <p>+2 fonds d'écrans</p>
+          <a href="computerDB.html">VOIR</a>
+        </li>
+        <li>
+          <h3>NARUTO</h3>
+          <p>+2 fonds d'écrans</p>
+          <a href="computerNaruto.html">VOIR</a>
+        </li>
+      </ul>
+      <div class="banner-container-link-social">
+        <h2>SOCIAL</h2>
+        <div class="social-container">
+            <a href="https://twitter.com/vlemrc"><i class="fab fa-twitter"></i> @vlemrc</a>
+            <a href="#"><i class="fab fa-snapchat"></i> Vicoboss7</a>
+            <a href="https://www.instagram.com/vlemrc/"><i class="fab fa-instagram"></i> @vlemrc</a>
+        </div>
+        <p>
+          Copyright © 2020 M.LEMERCIER, Inc.
+      </p>
+    </div>
+    </div>
+  </div>
+  </section>
 </body>
 </html>
