--- a/computerDB.html
+++ b/computerDB.html
@@ -28,37 +28,27 @@
     </ul>
   </header>
   <nav>
-    <a href="BannerNaruto.html">NARUTO</a>
-    <a href="BannerOP.html">ONE PIECE</a>
-    <a href="BannerSNK.html">SNK</a>
-    <a href="BannerHxH.html">HxH</a>
-    <a class="active" href="BannerDN.html">DEATHNOTE</a>
-    <a href="BannerDB.html">DB</a>
-    <a href="BannerMix.html">OTHER</a>
+    <a href="computerNaruto.html">NARUTO</a>
+    <a href="computerOP.html">ONE PIECE</a>
+    <a href="computerSNK.html">SNK</a>
+    <a class="active" href="computerDB.html">DRAGONBALL</a>
+    <a href="computerMHA.html">MHA</a>
   </nav>
-<section id="Appreciate" class="appreciate">
-  <div class="container">
-      <ul class="appreciate-list">
-          <li class="appreciate-elem">
-            <img class="banniere" src="./img/Bannière/Ryuk&Lightbanniere.jpeg" alt="Ryuk" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Ryuk & Light</p>
-                <div class="appreciate-separator"></div>
-                <p>"Nope"</p>
-            </div>
-        </li>
-        <li class="appreciate-elem">
-          <img class="banniere" src="./img/Bannière/L&Light.JPG" alt="l&light" class="appreciate-elem-img">
-          <div class="appreciate-elem-text">
-              <p>L & Light</p>
-              <div class="appreciate-separator"></div>
-              <p>Black theme</p>
-          </div>
-      </li>
-      </ul>
-  </div>
-</section>
-<footer>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="fdepc" src="./img/PC/BrolyPC 17.41.05.jpeg" alt="Broly" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Broly</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Espace</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <footer>
     <aside>
       <div class="block">
           <h2>SOCIAL</h2>
