--- a/computerNaruto.html
+++ b/computerNaruto.html
@@ -28,58 +28,48 @@
     </ul>
   </header>
   <nav>
-    <a href="BannerNaruto.html">NARUTO</a>
-    <a href="BannerOP.html">ONE PIECE</a>
-    <a href="BannerSNK.html">SNK</a>
-    <a  class="active" href="BannerHxH.html">HxH</a>
-    <a href="BannerDN.html">DEATHNOTE</a>
-    <a href="BannerDB.html">DB</a>
-    <a href="BannerMix.html">OTHER</a>
+    <a class="active" href="computerNaruto.html">NARUTO</a>
+    <a href="computerOP.html">ONE PIECE</a>
+    <a href="computerSNK.html">SNK</a>
+    <a href="computerDB.html">DB</a>
+    <a href="computerMHA.html">MHA</a>
   </nav>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Gon&Kiruabanniere.png" alt="Gon&Kirua" class="appreciate-elem-img">
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/Itachi&Sasuke.JPG" alt="Itachi&Sasuke" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Gon & Kirua</p>
+                  <p>Itachi & Sasuke</p>
                   <div class="appreciate-separator"></div>
-                  <p>"Yo"</p>
+                  <p>Confrontation</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img class="banniere" src="./img/Bannière/Alluka&Killua.JPG" alt="Alluka&KIrua" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Alluka, Kirua & Gon</p>
-                <div class="appreciate-separator"></div>
-                <p>Photo</p>
-            </div>
-        </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Meruem.JPG" alt="Meruem" class="appreciate-elem-img">
+              <img class="fdepc" src="./img/PC/ShikamaruPC.JPG" alt="Shikamaru" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Meruem</p>
+                  <p>Shikamaru</p>
                   <div class="appreciate-separator"></div>
-                  <p>Nuit étoilée</p>
+                  <p>Technique des ombres</p>
               </div>
           </li>
+      </ul>
+  </div>
+</section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
           <li class="appreciate-elem">
-            <img class="banniere" src="./img/Bannière/KiruaGonXX.JPG" alt="Kirua&GOn" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Kirua, Gon, Léolio & Kurapika</p>
-                <div class="appreciate-separator"></div>
-                <p>dessins 1998</p>
-            </div>
+              <img class="fdepc" src="./img/PC/NarutomcdoPC 17.31.19.JPG" alt="Naruto" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Naruto Uzumaki</p>
+                  <div class="appreciate-separator"></div>
+                  <p>MCDO</p>
+              </div>
           </li>
-        </ul>
-    </div>
-  </section>
+      </ul>
+  </div>
+</section>
 <footer>
   <aside>
     <div class="block">
