--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >À la une ce mois-ci, @trash_scar !</h2>
+          <h2 class="title-underline" >À la une ce mois-ci, les concepts originaux!</h2>
           <ul class="appreciate-list">
               <li class="appreciate-elem">
                   <img src="./img/Tokyoghoul/kenkaneki3.jpeg" alt="Kaneki" class="appreciate-elem-img">
