--- a/BannerDB.html
+++ b/BannerDB.html
@@ -34,6 +34,7 @@
     <a href="BannerHxH.html">HxH</a>
     <a href="BannerDN.html">DEATHNOTE</a>
     <a class="active" href="BannerDB.html">DRAGONBALL</a>
+    <a href="BannerMix.html">OTHER</a>
   </nav>
 <section id="Appreciate" class="appreciate">
     <div class="container">
