--- a/BannerOP.html
+++ b/BannerOP.html
@@ -34,6 +34,7 @@
     <a href="BannerHxH.html">HxH</a>
     <a href="BannerDN.html">DEATHNOTE</a>
     <a href="BannerDB.html">DB</a>
+    <a href="BannerMix.html">OTHER</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
