--- a/computer.html
+++ b/computer.html
@@ -46,6 +46,15 @@
           </li>
           <li>
             <h2>
+              Toriyama
+            </h2>
+            <img src="./img/PC/Beerus&Godku.jpg" alt="Beerus">
+            <h2>
+              Beerus & GokuGod
+            </h2>
+          </li>
+          <li>
+            <h2>
               Makii
             </h2>
             <img src="./img/PC/SanjiLuffyZoroPC.JPG" alt="SanjiLuffyZoro">
