--- a/computerDB.html
+++ b/computerDB.html
@@ -45,6 +45,14 @@
                     <p>Espace</p>
                 </div>
             </li>
+            <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/Beerus&Godku.jpg" alt="Beerus" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Beerus & GokuGod</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Dragonball Super</p>
+              </div>
+          </li>
         </ul>
     </div>
   </section>
