--- a/computerMHA.html
+++ b/computerMHA.html
@@ -45,6 +45,14 @@
                   <p>Technique</p>
               </div>
           </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/ShotoPC.png" alt="Shoto" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Shoto</p>
+                <div class="appreciate-separator"></div>
+                <p>Minimaliste</p>
+            </div>
+        </li>
       </ul>
   </div>
 </section>
