--- a/computerNaruto.html
+++ b/computerNaruto.html
@@ -46,13 +46,13 @@
               </div>
           </li>
           <li class="appreciate-elem">
-              <img class="fdepc" src="./img/PC/ShikamaruPC.JPG" alt="Shikamaru" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Shikamaru</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Technique des ombres</p>
-              </div>
-          </li>
+            <img class="fdepc" src="./img/PC/NarutomcdoPC 17.31.19.JPG" alt="Naruto" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Naruto Uzumaki</p>
+                <div class="appreciate-separator"></div>
+                <p>MCDO</p>
+            </div>
+        </li>
       </ul>
   </div>
 </section>
@@ -60,13 +60,21 @@
   <div class="container">
       <ul class="appreciate-list">
           <li class="appreciate-elem">
-              <img class="fdepc" src="./img/PC/NarutomcdoPC 17.31.19.JPG" alt="Naruto" class="appreciate-elem-img">
+              <img class="fdepc" src="./img/PC/minatonarutokushina.png" alt="Minato" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Naruto Uzumaki</p>
+                  <p>Naruto, Minato & Kushina</p>
                   <div class="appreciate-separator"></div>
-                  <p>MCDO</p>
+                  <p>Family</p>
               </div>
           </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/akastukilogopc.png" alt="Akatsuki" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Akatsuki</p>
+                <div class="appreciate-separator"></div>
+                <p>Logo</p>
+            </div>
+        </li>
       </ul>
   </div>
 </section>
