--- a/computerSNK.html
+++ b/computerSNK.html
@@ -45,6 +45,36 @@
                   <p>Souffle ardent</p>
               </div>
           </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/LeviPC.jpg" alt="Levi" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Livaï Ackerman</p>
+                <div class="appreciate-separator"></div>
+                <p>"J'ai passé ma vie à massacrer des êtres humains"</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/ErwinPC.jpg" alt="ErwinPC" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Erwin Smith</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Fédérateur</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/Levi&erenPC.png" alt="Levi" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Livaï & Eren</p>
+                <div class="appreciate-separator"></div>
+                <p>Arrivée Eren dans le bataillon d'exploration</p>
+            </div>
+        </li>
       </ul>
   </div>
 </section>
