--- a/phone.html
+++ b/phone.html
@@ -38,8 +38,8 @@
     <a href="MHAP.html">MHA</a>
   </nav>
   <section class="phoneaccueil">
-    <img class="phone-img" src="./img/Dragonball/Piccolo&Gohan.png" alt="Piccolo&Gohan">
-    <a href="./DBP.html" class="gotodbz">Voir Wallpaper DRAGONBALL</a>
+    <img class="phone-img" src="./img/MHA/izukunight.jpeg" alt="Izuku">
+    <a href="./MHAP.html" class="gotodbz">Voir Wallpaper MHA</a>
     <h1>Choisissez un manga ci-dessus, et trouvez votre bonheur!</h1>
     <p>Une selection de plus de 200 fonds d'écrans pour téléphone n'attend que vous. Venez les découvrir.</p>
   </section>
