pack & affiche maj

--- a/index.html
+++ b/index.html
@@ -45,41 +45,41 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >À la une ce mois-ci, @trash_scar !</h2>
+          <h2 class="title-underline" >À la une ce mois-ci, @hermesNDA_ !</h2>
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                  <img src="./img/Tokyoghoul/kenkaneki3.jpeg" alt="Kaneki" class="appreciate-elem-img">
+                  <img src="./img/One piece/Usopp.JPG" alt="Usopp" class="appreciate-elem-img">
                   <div class="appreciate-elem-text">
-                      <p>Ken Kaneki</p>
-                      <p>Désespoir</p>
+                      <p>Usopp</p>
+                      <p>Sniper</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: i.scxr</p>
+                      <p>Auteur: Hermès</p>
                   </div>
               </li>
               <li class="appreciate-elem">
-                <img src="./img/Naruto/kabuto.jpeg" alt="Kabuto" class="appreciate-elem-img">
+                <img src="./img/inutilise/hxh/kurapikablue.JPG" alt="Kurapika" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Kabuto Yakushi</p>
-                    <p>Ryuchido</p>
+                    <p>Kurapika Kuruta</p>
+                    <p>Judgment chain</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: i.scxr</p>
+                    <p>Auteur: Hermès</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Naruto/KisameHoshigaki.jpeg" alt="Kisame" class="appreciate-elem-img">
+              <img class="eren" src="./img/One piece/acevogue.jpeg" alt="Ace" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Kisame Hoshigaki</p>
-                  <p>1000 requins aqueux</p>
+                  <p>Ace</p>
+                  <p>VOGUE</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: i.scxr</p>
+                  <p>Auteur: Hermès</p>
               </div>
             </li>
             <li class="appreciate-elem2">
               <div class="appreciate-affiche">
-                <img src="img/affiche/zoroiscxr.jpeg" alt="zoro">
+                <img src="img/affiche/hermesnda.jpg" alt="livai">
               </div>
               <div class="appreciate-elem2-text">
-                  <p>@trash_scar est un des meilleurs en collage. Il sait utiliser de beaux arrières-plans et bien coller le/les personnages dessus. Les fonds d'écrans ne sont incroyables mais le résultat est propre, soigné. Il publie vraiment souvent, suivez-le.</p>
+                  <p>@HermesNDA_ est un des meilleurs en collage. Il sait utiliser de beaux arrières-plans et bien coller le/les personnages dessus. Les fonds d'écrans ne sont incroyables mais le résultat est propre, soigné. Il publie vraiment souvent, suivez-le. De plus il essaie à présent de vivre de sa passion. Il est ouvert aux commandes, tentez le coup !</p>
               </div>
           </li>
           </ul>
@@ -88,26 +88,25 @@
     <div class="pack">
       <div class="pack-container">
         <h2>STARTER PACK</h2>
-        <p>Otama & Ace</p>
+        <p>Flow stratosphérique</p>
           <div class="starter">
             <ul class="starter-list1">
               <li class="starter-elem">
-                <img src="./img/affiche/OtamaAce1.JPG" alt="Otama & Ace">
+                <img class="borderpack" src="./img/affiche/SPplacnhebarbeblanche.jpeg" alt="Barbe blanche">
               </li>
               <li class="starter-elem">
-                <img src="./img/affiche/OtamaAce2.JPG" alt="Otama & Ace">
+                <img class="borderpack" src="./img/affiche/SPplanchekaido.png" alt="Kaido">
               </li>
             </ul>
             <ul class="starter-list2">
               <li class="starter-elem">
-                <img src="./img/affiche/OtamaAce3.JPG" alt="Otama & Ace">
+                <img class="borderpack" src="./img/affiche/SPplancheRoger.jpeg" alt="Roger">
               </li>
               <li class="starter-elem">
-                <img src="./img/affiche/OtamaAce4.JPG" alt="Otama & Ace">
+                <img class="borderpack" src="./img/affiche/SPplancheShanjs.jpeg" alt="Shanks">
               </li>
             </ul>
           </div>
-          <p>Disponible en bannière dans "Other"</p>
         </div>
       </div>
     <section id="Appreciate" class="appreciate">
